# FacePunch

./: .gitignore  CMakeLists.txt  README.md
include/: FaceDetector.hpp  FaceEmbedder.hpp  FaceIndex.hpp  MainWindow.hpp  SettingsDialog.hpp  config.h
src/: FaceDetector.cpp  FaceEmbedder.cpp  FaceIndex.cpp  MainWindow.cpp  MainWindow.ui  SettingsDialog.cpp  config.cpp  main.cpp
